# qwen_model_loader

./: LICENSE  README.md  pyproject.toml
app/: anthropic.py  config_store.py  main.py  model_manager.py  schemas.py  service.py
app/api/: routes.py
app/engine/: base.py  llama_engine.py  llama_server_engine.py
config/: config.json
docs/superpowers/plans/: 2026-04-21-anthropic-compat.md
docs/superpowers/specs/: 2026-04-21-anthropic-compat-design.md
tests/: test_core.py
